welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:8: error: ';' expected but 'else' found.
    else(){
    ^